@@ -55,6 +55,7 @@ Conrad Steenberg <gnocci-man(at)users(dot)sourceforge(dot)net> - symbol tree pat
 Herbert Voss <voss(at)perce(dot)de> - LaTeX file template
 Moritz Barsnick <barsnick(at)users(dot)sourceforge(dot)net> - Split Vertically command
 Tyler D'Agosta - Add missing HTML entities
+Walery Studennikov <despairr(at)gmail(dot)com> - YAML filetype patch
 
 Translators:
 ------------
