@@ -43,4 +43,5 @@ LaTeX=*.tex;*.sty;*.idx;*.ltx;
 reStructuredText=*.rest;*.reST;*.rst;
 SQL=*.sql;
 Po=*.po;*.pot;
+YAML=*.yaml;*.yml;
 None=*;
