@@ -1,0 +1,41 @@
+# For complete documentation of this file, please see Geany's main documentation
+[styling]
+# foreground;background;bold;italic
+default=0x000000;0xffffff;false;false
+comment=0x808080;0xffffff;false;false
+identifier=0x000088;0xffffff;true;false
+keyword=0x991111;0xffffff;true;false
+number=0x007f00;0xffffff;false;false
+reference=0x008888;0xffffff;false;false
+document=0x000088;0xffffff;false;false
+text=0x333366;0xffffff;false;false
+error=0xff0000;0xffffff;true;true
+operator=0x301010;0xffffff;false;false
+
+
+[keywords]
+# all items must be in one line
+keywords=true false yes no
+
+
+[settings]
+# default extension used when saving files
+extension=yaml
+
+# the following characters are these which a "word" can contains, see documentation
+#wordchars=_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
+
+# if only single comment char is supported like # in this file, leave comment_close blank
+comment_open=#
+comment_close=
+
+# set to false if a comment character/string should start at column 0 of a line, true uses any
+# indentation of the line, e.g. setting to true causes the following on pressing CTRL+d
+	#command_example();
+# setting to false would generate this
+#	command_example();
+# This setting works only for single line comments
+comment_use_indent=true
+
+# context action command (please see Geany's main documentation for details)
+context_action_cmd=
