@@ -170,6 +170,7 @@ int Scintilla_LinkLexers() {
 	LINK_LEXER(lmTCL);
 	LINK_LEXER(lmVHDL);
 	LINK_LEXER(lmXML);
+	LINK_LEXER(lmYAML);
 
 //--Autogenerated -- end of automatically generated section
 
