@@ -62,7 +62,7 @@ MARSHALLER=scintilla-marshal.o
 LEXOBJS=\
 LexBash.o LexAsm.o LexCSS.o LexCPP.o LexCrontab.o LexHTML.o LexOthers.o LexPascal.o \
 LexPerl.o LexPython.o LexSQL.o LexCaml.o LexOMS.o LexTCL.o LexRuby.o LexFortran.o LexVHDL.o LexMatlab.o \
-LexD.o LexLua.o LexHaskell.o LexBasic.o LexR.o
+LexD.o LexLua.o LexHaskell.o LexBasic.o LexR.o LexYAML.o
 #--Autogenerated -- end of automatically generated section
 
 all: $(COMPLIB)
