@@ -72,15 +72,16 @@ typedef enum
 	GEANY_FILETYPES_CSS,
 	GEANY_FILETYPES_DOCBOOK,
 	GEANY_FILETYPES_HTML,
- 	GEANY_FILETYPES_XML,
+	GEANY_FILETYPES_XML,
 
 	/* miscellaneous languages */
 	GEANY_FILETYPES_CONF,
 	GEANY_FILETYPES_DIFF,
+	GEANY_FILETYPES_PO,
 	GEANY_FILETYPES_LATEX,
 	GEANY_FILETYPES_REST,
 	GEANY_FILETYPES_SQL,
-	GEANY_FILETYPES_PO,
+	GEANY_FILETYPES_YAML,
 
 	GEANY_FILETYPES_NONE,	/* must be last filetype */
 	GEANY_MAX_BUILT_IN_FILETYPES	/* Use filetypes_array->len instead */
